--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LRU</title>
-</head>
-<body>
-  
-  <script type = "module" src="main.js"></script>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LRU</title>
+    <script src="./LRU.js"></script>
+  </head>
+  <body>
+    <script>
+      const a = new LRU(3);
+      a.put(1, 1);
+      a.put(2, 1);
+      a.get(2);
+      a.get(1);
+      a.get(1);
+      a.put(3, 1);
+      // a.put(4, 1);
+      // a.put(5, 1);
+      // a.put(6, 1);
+      // a.get(6);
+      console.log(a.mas);
+    </script>
+  </body>
 </html>
